<?xml version="1.0"?>
<package>
 <name>dyn_goal</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="rui.bettencourt@tecnico.ulisboa.pt"></author>
 <maintainer email="rui.bettencourt@tecnico.ulisboa.pt"></maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>message_generation</build_depend>

 <run_depend>message_runtime</run_depend>

</package>
